fix: compatibilidad con mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,7 +25,12 @@ html {
 
 body {
   height: 100%;
-  overflow: hidden;
+}
+
+@media (max-width: 768px) {
+  body {
+    overflow-y: auto;
+  }
 }
 
 body {
